@@ -54,8 +54,10 @@ TEST(test_player_valid_instrument)
  	create_simple_module(ctx);
 	set_instrument_volume(ctx, 0, 0, 22);
 	set_instrument_volume(ctx, 1, 0, 33);
-	new_event(ctx, 0, 0, 0, 60, 2, 40, 0x0f, 2, 0, 0);
-	new_event(ctx, 0, 1, 0,  0, 1,  0, 0x00, 0, 0, 0);
+	new_event(ctx, 0, 0, 0, 60, 1, 0, 0x0f, 2, 0, 0);
+	new_event(ctx, 0, 1, 0,  0, 2, 0, 0x00, 0, 0, 0);
+	new_event(ctx, 0, 2, 0, 60, 1, 0, 0x00, 0, 0, 0);
+	new_event(ctx, 0, 3, 0,  0, 2, 0, 0x00, 0, 0, 0);
 
 	xmp_player_start(opaque, 0, 44100, 0);
 
@@ -67,8 +69,8 @@ TEST(test_player_valid_instrument)
 	vi = &p->virt.voice_array[voc];
 
 	fail_unless(vi->note == 59, "set note");
-	fail_unless(vi->ins  ==  1, "set instrument");
-	fail_unless(vi->vol  == 39 * 16, "set volume");
+	fail_unless(vi->ins  ==  0, "set instrument");
+	fail_unless(vi->vol  == 22 * 16, "set volume");
 	fail_unless(vi->pos0 ==  0, "sample position");
 
 	xmp_player_frame(opaque);
@@ -80,28 +82,33 @@ TEST(test_player_valid_instrument)
 	 * sets the volume to the new instrument's default volume.
 	 */
 	xmp_player_frame(opaque);
-	fail_unless(vi->ins  ==  1, "not original instrument");
+	fail_unless(vi->ins  ==  0, "not original instrument");
 	fail_unless(vi->note == 59, "not same note");
 	fail_unless(vi->vol  == 33 * 16, "not new volume");
 	fail_unless(vi->pos0 !=  0, "sample reset");
 
-	xmp_player_frame(opaque);
+	xmp_player_frame(opaque);		/* row 1 frame 1 */
 
-	/* Row 2: valid instrument with no note (FT2)
+	/* Row 2: setup new note event */
+	xmp_player_frame(opaque);
+	fail_unless(vi->note == 59, "set note");
+	fail_unless(vi->ins  ==  0, "set instrument");
+	fail_unless(vi->vol  == 22 * 16, "set volume");
+	fail_unless(vi->pos0 ==  0, "sample position");
+
+	xmp_player_frame(opaque);		/* row 2 frame 1 */
+
+	/* Row 3: valid instrument with no note (FT2)
 	 *
 	 * When a new valid instrument, different from the current instrument
 	 * and no note is set, FT2 keeps playing the current sample but
 	 * sets the volume to the old instrument's default volume.
 	 */
 	set_quirk(ctx, QUIRK_OINSVOL);
-
 	xmp_player_frame(opaque);
-	fail_unless(vi->ins  ==  1, "not original instrument");
+	fail_unless(vi->ins  ==  0, "not original instrument");
 	fail_unless(vi->note == 59, "not same note");
 	fail_unless(vi->vol  == 22 * 16, "not old volume");
 	fail_unless(vi->pos0 !=  0, "sample reset");
-
-
-	
 }
 END_TEST
